--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2001,6 +2001,46 @@ textarea.form-control {
 	}
 }
 
+// My fix for centering the text in new contact page
+.mi-blog-text-center {
+	p {
+		text-align: center;
+		&.float-left, &.float-right, &.float-center {
+			text-align: center;
+			font-style: italic;
+			img {
+				padding-top: 0.5em;
+				padding-bottom: 0.5em;
+				display: block;
+			}
+			span {
+				font-size: small;
+			}
+		}
+		&.float-left, &.float-right {
+			max-width: 50%;
+			img {
+				max-width: 100%;
+				max-height: 25em;
+			}
+		}
+		&.float-left {
+			padding-right: 2em;
+		}
+		&.float-right {
+			padding-left: 2em;
+		}
+		&.float-center {
+			padding-top: 1.5em;
+			padding-bottom: 1.5em;
+			img {
+				max-width: 100%;
+				height: auto;
+			}
+		}
+	}
+}
+
 .mi-popup-overlay {
 	&.mfp-bg {
 		opacity: 0.95 !important;
